--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "analiza-sync": "^1.0.1",
+    "nanoid": "^5.1.6"
   }
 }
